# stuff-saver

./: .gitignore  .pdm-python  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/actions/setup-pdm-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  modules.md
modules/: index.html
news/: 1.bugfix.md
search/: search_index.json
tasks/: release.py
