[project]
name = "stuff_saver"
description = "Just save stuffs"
authors = [{ name = "Joris GUERRY", email = "j@9h.gg" }]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9,<4.0"
dependencies = []
license = { text = "MIT" }
keywords = ['python']

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


[project.urls]
Homepage = "https://jorisgu.github.io/stuff-saver/"
Repository = "https://github.com/jorisgu/stuff-saver"
Documentation = "https://jorisgu.github.io/stuff-saver/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["stuff_saver"]


[tool.mypy]
files = ["stuff_saver"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true


[tool.pytest.ini_options]
addopts = "-rsxX -l --tb=short --strict"
testpaths = ["tests/"]
python_files = ["tests/*/test*.py"]
markers = ["skipif: conditionally skip tests"]

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = [
  "./**/.git",
  "tests",
  ".idea",
  ".vscode",
  ".venv",
  "pdm.lock",
  ".gitignore",
  "var",
]
package-dir = "."
includes = ["stuff_saver"]


[tool.pdm.dev-dependencies]
test = ["pytest>=7.2.0", "pytest-cov>=4.0.0"]
dev = [
  "deptry>=0.6.4",
  "mypy>=0.981",
  "pre-commit>=2.20.0",
  "tox>=3.25.1",
  "ruff>=0.0.235",
  "parver>=0.5",
  "rich>=13.7.1",
  "towncrier>=24.7.1",
]
docs = [
  "mkdocs>=1.4.2",
  "mkdocs-material>=8.5.10",
  "mkdocstrings[python]>=0.19.0",
]


[tool.pdm.scripts]
release = "python tasks/release.py"
test = "pytest"
coverage = { shell = """\
                    python -m pytest \
                              --verbosity=3 \
                              --cov=src/pdm \
                              --cov-branch \
                              --cov-report term-missing \
                              tests/
                    """ }
tox = "tox"
doc = { cmd = "mkdocs serve", help = "Start the dev server for docs preview" }
lint = "pre-commit run --all-files"
complete = { call = "tasks.complete:main", help = "Create autocomplete files for bash and fish" }


[tool.pdm.version]
source = "scm"


[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
lint.select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
]
lint.ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"tasks/*" = ["S603", "S607"]


[tool.towncrier]
package = "stuff_saver"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/jorisgu/stuff-saver/issues/{issue})"
directory = "news/"
title_format = "## Release v{version} ({project_date})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "break"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features & Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dep"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals and Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellany"
showcontent = true
